ng-route working added companies

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
+            <artifactId>angular-route</artifactId>
+            <version>1.5.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
             <artifactId>angular-animate</artifactId>
             <version>1.5.8</version>
         </dependency>
